--- a/_config.yml
+++ b/_config.yml
@@ -10,21 +10,19 @@
 ############################
 
 # Name of website
-title: My website
+title: Canadian Sikh Society
 
 # Your name to show in the footer
-author: Some Person
+author: CSSTS
 
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  About: "about"
+  Team: "team"
+  Contact: "contact"
 
 ################
 # --- Logo --- #
@@ -50,14 +48,11 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "cssts25@yahoo.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
+  facebook: 61581689617993
+  whatsapp: 001-778-319-3543
+  youtube: @canadiansikhstudycentre7324
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
 #  linkedin: daattali
